# major-project-AutoML

./: .gitignore  commands.txt  pyproject.toml  requirements.txt
public/temp/strat_responses/: dataset__7df8bef8b97c.json
src/: dataset_profiler.py  main.py  schema.py  strategic_lm.py  strategy_executor.py
src/strat_responses/: house_price__c205c45c3abd.json
src/utils/: strategy_cache.py
