[project]
name = "major-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "types-requests>=2.32.4.20260107",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
]
